# scitex-datetime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: auto-merge-to-develop.yaml  ci.yml  cla.yml  docs.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  test.yml
docs/sphinx/: conf.py
examples/: quickstart.py
src/scitex_datetime/: __init__.py  _normalize_timestamp.py
src/scitex_datetime/_sphinx_html/_modules/scitex_datetime/: _normalize_timestamp.html
tests/: conftest.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_cross_package_imports.py  test_examples.py
tests/scitex_datetime/: test__linspace.py  test__normalize_timestamp.py
